--- a/index.html
+++ b/index.html
@@ -1637,8 +1637,8 @@ underline;
           <div class="title-header">
             <h1 class="title-header-view">
               <span class="gradient-overlay"></span>
-              <span class="title">¡Celebra Con Nosotros!</span>
-              <span class="subtitle">“Te invito a celebrar mi cumpleaños junto con mi familia.”</span>
+              <span class="title">¡Celebra mis 40!</span>
+              <span class="subtitle">“Te invito a celebrar mi cumpleaños este primero de junio (sábado) a las 6 pm.”</span>
             </h1>
           </div>
           <div class="navigation-hint down"></div>
